media/css/firefox/landing/kit.scss
/* ... */
.fl-banner .heading {
    font-family: var(--condensed-title-font-family);
    font-size: 4rem; // 64px
    font-weight: var(--font-weight-semibold);
    line-height: 0.9;
    letter-spacing: -0.6;
    @media (min-width: 768px) {
        font-size: 5rem; // 80px
    }

    @media (min-width: 1024px) {
        font-size: 8rem; // 128px
    }
}

.fl-banner-content-centered .fl-banner-content-inner {
    align-items: center; // ensure c-banner-body is centered within container
}

.c-banner-subheading {
    font-size: var(--font-size-subheading-1);
    font-weight: var(--font-weight-semibold);
    line-height: 1.1;
    margin-top: 10px;
    margin-bottom: 24px;
}

.c-banner-body {
    max-width: 400px;
}

.c-card-gallery {
    // match width/padding to fl-banner-container
    margin-inline: auto;
    padding-inline: 40px;
    width: 100%;
    max-width: calc(var(--widths-viewport-wrapper-screen-2xl) * 1px);

    // card gallery styles
    display: flex;
    flex-direction: column;
    gap: 16px;

    @media (min-width: 1024px) {
        flex-direction: row;
    }
}

// match width/padding to fl-banner-container
@media (max-width: 767px) {
    .c-card-gallery {
        padding-inline: calc(var(--scale-24) * 1px);
    }
}

.c-gallery-card {
    --padding: 32px;
    border-radius: 40px;
    padding-block-start: var(--padding);
    overflow: clip;
    display: grid;
    align-items: start;
    grid-template-columns: [full-width-start] var(--padding) [text-start] 1fr [text-end] var(--padding) [full-width-end];
    row-gap: 70px;

    @media (min-width: 768px) {
        --padding: 56px;
        border-radius: 80px;
    }

    @media (min-width: 1024px) {
        --padding: 80px;
        border-radius: 128px;
    }
}

.c-gallery-card-type-1 {
    .c-gallery-card-media-container {
        grid-column: text-start / full-width-end;
        border-top-left-radius: 3%;
        overflow: clip;
    }
}

.c-gallery-card-type-2 {
    .c-gallery-card-media-container {
        grid-column: full-width;
    }
}

.c-gallery-card-text-container {
    grid-column: text;
    display: grid;
    gap: 30px;
    justify-items: start;
    font-size: var(--font-size-body-medium);

    ol {
        counter-reset: custom-marker;
        display: grid;
        gap: 10px;

        li {
            counter-increment: custom-marker;

            &::before {
                content: counter(custom-marker);
                width: 24px;
                aspect-ratio: 1 / 1;
                display: inline-flex;
                align-items: center;
                justify-content: center;
                background-color: var(--purple-purple);
                color: var(--neutrals-white);
                border-radius: 50%;
                font-size: var(--font-size-body-2xsmall);
                margin-inline-end: 10px;
            }
        }
    }

    svg {
        border-radius: 2px;
        background-color: rgba(21, 20, 26, 0.10);
        padding: 4px;
        vertical-align: middle;
        box-sizing: content-box;
    }
}

.c-gallery-card-media-container {
    align-self: end;
}

.c-gallery-card-heading {
    font-size: 1.8125rem; // 29px
    font-weight: var(--font-weight-semibold);
}

.c-gallery-card-dark {
    --title-text-color: var(--neutrals-white);
    background-color: var(--purple-dark-purple);
    color: var(--neutrals-white);
}

.c-gallery-card-light {
    background-color: var(--purple-light-purple);
}
/* ... */

